# rustls-rustcrypto

./: Cargo.toml
examples-xsmall/: Cargo.toml
src/: kx.rs  lib.rs  misc.rs  quic.rs  sign.rs  verify.rs
src/aead/: chacha20.rs  gcm.rs
src/sign/: ecdsa.rs  eddsa.rs  rsa.rs
src/verify/: ecdsa.rs  eddsa.rs  rsa.rs
tests/: fake_cert_client_verifier.rs  fake_cert_server_verifier.rs
validation/consumer-no_std/: Cargo.toml
validation/local_ping_pong_openssl/: Cargo.toml
