[package]
name = "rustls-rustcrypto"
description = "Pure Rust cryptography provider for the Rustls TLS library using algorithm implementations from the\nRustCrypto organization\n"
version = "0.0.4-alpha"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RustCrypto/rustls-rustcrypto"
categories = ["cryptography", "no-std"]
keywords = ["rustls", "tls"]
edition = "2024"
rust-version = "1.85.0"

[dependencies]
rand = { git = "https://github.com/rust-random/rand.git", rev = "75fe38fff59e5abb16ed5a146d61960cad27dc0f", version = "=0.10.0-rc.5", default-features = false, features = [
  "sys_rng",
] }

[dependencies.aead]
version = "=0.6.0-rc.5"
default-features = false

[dependencies.aes-gcm]
version = "=0.11.0-rc.2"
default-features = false
features = ["aes", "alloc"]

[dependencies.chacha20poly1305]
version = "=0.11.0-rc.2"
default-features = false

[dependencies.crypto-common]
version = "=0.2.0-rc.8"
default-features = false

[dependencies.der]
version = "=0.8.0-rc.10"
default-features = false

[dependencies.digest]
version = "=0.11.0-rc.5"
default-features = false

[dependencies.ecdsa]
version = "=0.17.0-rc.10"
default-features = false
features = ["alloc"]

[dependencies.ed25519-dalek]
version = "=3.0.0-pre.3"
default-features = false
features = ["pkcs8"]

[dependencies.hmac]
version = "=0.13.0-rc.3"
default-features = false

[dependencies.p256]
version = "=0.14.0-rc.2"
default-features = false
features = ["pem", "ecdsa", "ecdh"]

[dependencies.p384]
version = "=0.14.0-rc.2"
default-features = false
features = ["pem", "ecdsa", "ecdh"]

[dependencies.paste]
version = "=1.0.15"
default-features = false

[dependencies.pkcs8]
version = "=0.11.0-rc.8"
default-features = false
features = ["pem", "pkcs5"]

[dependencies.pki-types]
package = "rustls-pki-types"
version = "=1.13.2"
default-features = false

[dependencies.rand_core]
version = "=0.10.0-rc-3"
default-features = false
features = []

[dependencies.rsa]
version = "=0.10.0-rc.11"
default-features = false
features = ["sha2", "encoding"]

[dependencies.rustls]
version = "=0.23.35"
default-features = false

[dependencies.sec1]
version = "=0.8.0-rc.10"
default-features = false
features = ["pem", "der"]

[dependencies.sha2]
version = "=0.11.0-rc.3"
default-features = false

[dependencies.signature]
version = "=3.0.0-rc.6"
default-features = false

[dependencies.webpki]
package = "rustls-webpki"
version = "=0.103.8"
default-features = false

[dependencies.x25519-dalek]
version = "=3.0.0-pre.3"
default-features = false

[dev-dependencies.getrandom]
version = "=0.3"
features = []

[features]
default = ["std", "tls12", "zeroize"]
logging = ["rustls/logging"]
tls12 = ["rustls/tls12"]
std = ["alloc", "webpki/std", "pki-types/std", "rustls/std"]
alloc = ["webpki/alloc", "pki-types/alloc", "aead/alloc", "ed25519-dalek/alloc"]
zeroize = ["ed25519-dalek/zeroize", "x25519-dalek/zeroize"]
