[package]
name = "examples-xsmall"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
anyhow = "1.0.100"
hyper = "1.8.1"
hyper-rustls = { version = "=0.27.7", features = ["http2", "webpki-roots"] }
pki-types = { package = "rustls-pki-types", version = "1.13.2", default-features = false }
rcgen = "0.14.6"
rustls = { version = "=0.23.35", default-features = false }
rustls-provider-rustcrypto = { path = "../" }
tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "macros",
  "io-std",
  "io-util",
  "net",
] }
vc-ltl = "5.3.1"

[features]
tls12 = ["rustls-provider-rustcrypto/tls12"]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[patch.crates-io]
rustls = { git = 'https://github.com/rustls/rustls' }
tokio-rustls = { git = 'https://github.com/rustls/tokio-rustls' }
hyper-rustls = { git = "https://github.com/stevefan1999-personal/hyper-rustls" }
rcgen = { git = "https://github.com/rustls/rcgen" }

